@@ -20,10 +20,6 @@ package org.apache.pinot.broker.routing.instanceselector;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import java.time.Instant;
-import java.time.ZoneId;
-import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -33,33 +29,24 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
-import java.util.concurrent.TimeUnit;
 import org.apache.helix.model.ExternalView;
 import org.apache.helix.model.IdealState;
 import org.apache.helix.store.zk.ZkHelixPropertyStore;
 import org.apache.helix.zookeeper.datamodel.ZNRecord;
 import org.apache.pinot.broker.routing.adaptiveserverselector.AdaptiveServerSelector;
 import org.apache.pinot.common.assignment.InstancePartitions;
-import org.apache.pinot.common.metadata.ZKMetadataProvider;
-import org.apache.pinot.common.metadata.segment.SegmentZKMetadata;
 import org.apache.pinot.common.metrics.BrokerMetrics;
 import org.apache.pinot.common.request.BrokerRequest;
 import org.apache.pinot.common.request.PinotQuery;
 import org.apache.pinot.spi.config.table.RoutingConfig;
 import org.apache.pinot.spi.config.table.TableConfig;
 import org.apache.pinot.spi.config.table.TableType;
-import org.apache.pinot.spi.utils.CommonConstants;
-import org.mockito.Mockito;
 import org.testng.annotations.Test;
-import org.threeten.extra.MutableClock;
 
 import static org.apache.pinot.spi.utils.CommonConstants.Helix.StateModel.SegmentStateModel.CONSUMING;
 import static org.apache.pinot.spi.utils.CommonConstants.Helix.StateModel.SegmentStateModel.ERROR;
 import static org.apache.pinot.spi.utils.CommonConstants.Helix.StateModel.SegmentStateModel.OFFLINE;
 import static org.apache.pinot.spi.utils.CommonConstants.Helix.StateModel.SegmentStateModel.ONLINE;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
@@ -864,171 +851,6 @@ public class InstanceSelectorTest {
   }
 
   @Test
-  public void testStrictReplicaGroupWithNewSegments() {
-    String offlineTableName = "testTable_OFFLINE";
-    BrokerMetrics brokerMetrics = mock(BrokerMetrics.class);
-    MutableClock mutableClock = MutableClock.of(Instant.now(), ZoneId.systemDefault());
-    ZkHelixPropertyStore<ZNRecord> propertyStore = mock(ZkHelixPropertyStore.class);
-
-    // Set segment0 as old segment
-    String segment0 = "segment0";
-    SegmentZKMetadata offlineSegmentZKMetadata0 = new SegmentZKMetadata(segment0);
-    offlineSegmentZKMetadata0.setCreationTime(
-        mutableClock.millis() - CommonConstants.Helix.StateModel.NEW_SEGMENT_EXPIRATION_MILLIS - 100);
-    offlineSegmentZKMetadata0.setTimeUnit(TimeUnit.MILLISECONDS);
-    ZNRecord segmentZKMetadataZNRecord0 = offlineSegmentZKMetadata0.toZNRecord();
-    Mockito.when(
-        propertyStore.get(eq(ZKMetadataProvider.constructPropertyStorePathForSegment(offlineTableName, segment0)),
-            any(), anyInt())).thenReturn(segmentZKMetadataZNRecord0);
-
-    // Set segment1 as new segment
-    String segment1 = "segment1";
-    SegmentZKMetadata offlineSegmentZKMetadata1 = new SegmentZKMetadata(segment1);
-    offlineSegmentZKMetadata1.setCreationTime(mutableClock.millis() - 100);
-    offlineSegmentZKMetadata1.setTimeUnit(TimeUnit.MILLISECONDS);
-    ZNRecord segmentZKMetadataZNRecord1 = offlineSegmentZKMetadata1.toZNRecord();
-    Mockito.when(
-        propertyStore.get(eq(ZKMetadataProvider.constructPropertyStorePathForSegment(offlineTableName, segment1)),
-            any(), anyInt())).thenReturn(segmentZKMetadataZNRecord1);
-
-    StrictReplicaGroupInstanceSelector strictReplicaGroupInstanceSelector =
-        new StrictReplicaGroupInstanceSelector(offlineTableName, brokerMetrics, null, propertyStore, mutableClock);
-
-    String instance0 = "instance0";
-    String instance1 = "instance1";
-    Set<String> enabledInstances = ImmutableSet.of(instance0, instance1);
-    IdealState idealState = new IdealState(offlineTableName);
-    Map<String, Map<String, String>> idealStateSegmentAssignment = idealState.getRecord().getMapFields();
-    ExternalView externalView = new ExternalView(offlineTableName);
-    Map<String, Map<String, String>> externalViewSegmentAssignment = externalView.getRecord().getMapFields();
-    Set<String> onlineSegments = new HashSet<>();
-    onlineSegments.add(segment0);
-    onlineSegments.add(segment1);
-
-    // Ideal states for two segments
-    //   [segment0] -> [instance0:online, instance1:online]
-    //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, String> idealStateInstanceStateMap0 = new TreeMap<>();
-    idealStateInstanceStateMap0.put(instance0, ONLINE);
-    idealStateInstanceStateMap0.put(instance1, ONLINE);
-    idealStateSegmentAssignment.put(segment0, idealStateInstanceStateMap0);
-    idealStateSegmentAssignment.put(segment1, idealStateInstanceStateMap0);
-
-    // External view for two segments
-    //   [segment0] -> [instance0:online, instance1:online]
-    //   [segment1] -> [instance1:online]
-    Map<String, String> externalViewInstanceStateMap0 = new TreeMap<>();
-    externalViewInstanceStateMap0.put(instance0, ONLINE);
-    externalViewInstanceStateMap0.put(instance1, ONLINE);
-    externalViewSegmentAssignment.put(segment0, externalViewInstanceStateMap0);
-    Map<String, String> externalViewInstanceStateMap1 = new TreeMap<>();
-    externalViewInstanceStateMap1.put(instance1, ONLINE);
-    externalViewSegmentAssignment.put(segment1, externalViewInstanceStateMap1);
-
-    strictReplicaGroupInstanceSelector.init(enabledInstances, idealState, externalView, onlineSegments);
-
-    BrokerRequest brokerRequest = mock(BrokerRequest.class);
-    PinotQuery pinotQuery = mock(PinotQuery.class);
-    when(brokerRequest.getPinotQuery()).thenReturn(pinotQuery);
-    when(pinotQuery.getQueryOptions()).thenReturn(null);
-
-    int requestId = 0;
-    Map<String, String> expectedReplicaGroupInstanceSelectorResult = new HashMap<>();
-    expectedReplicaGroupInstanceSelectorResult.put(segment0, instance0);
-    expectedReplicaGroupInstanceSelectorResult.put(segment1, instance1);
-
-    InstanceSelector.SelectionResult selectionResult =
-        strictReplicaGroupInstanceSelector.select(brokerRequest, ImmutableList.of(segment0, segment1), requestId);
-    assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertTrue(selectionResult.getUnavailableSegments().isEmpty());
-
-    // Advance the clock to make segment1 from new segment to old segment.
-    mutableClock.add(CommonConstants.Helix.StateModel.NEW_SEGMENT_EXPIRATION_MILLIS, ChronoUnit.MILLIS);
-
-    // We need to re-update the map to make the clock expiration effective.
-    strictReplicaGroupInstanceSelector.init(enabledInstances, idealState, externalView, onlineSegments);
-    expectedReplicaGroupInstanceSelectorResult.put(segment0, instance1);
-    expectedReplicaGroupInstanceSelectorResult.put(segment1, instance1);
-    selectionResult =
-        strictReplicaGroupInstanceSelector.select(brokerRequest, ImmutableList.of(segment0, segment1), requestId);
-    assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertTrue(selectionResult.getUnavailableSegments().isEmpty());
-
-    // Add a new segment: segment3.
-    String segment3 = "segment3";
-    idealStateSegmentAssignment.put(segment3, idealStateInstanceStateMap0);
-    onlineSegments.add(segment3);
-    // External view for 3 segments
-    //   [segment0] -> [instance0:online, instance1:online]
-    //   [segment1] -> [instance1:online]
-    //   [segment3] -> [instance0:online]
-    // Segment3 is only available in instance0. This is fine for now because segment3 is a new segment.
-    Map<String, String> externalViewInstanceStateMap2 = new TreeMap<>();
-    externalViewInstanceStateMap2.put(instance0, ONLINE);
-    externalViewSegmentAssignment.put(segment3, externalViewInstanceStateMap2);
-    strictReplicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
-    expectedReplicaGroupInstanceSelectorResult.put(segment0, instance1);
-    expectedReplicaGroupInstanceSelectorResult.put(segment1, instance1);
-    selectionResult =
-        strictReplicaGroupInstanceSelector.select(brokerRequest, ImmutableList.of(segment0, segment3, segment1),
-            requestId);
-    assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertTrue(selectionResult.getUnavailableSegments().isEmpty());
-
-    // Advance clock to make segment3 old.
-    mutableClock.add(CommonConstants.Helix.StateModel.NEW_SEGMENT_EXPIRATION_MILLIS + 100, ChronoUnit.MILLIS);
-    strictReplicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
-    selectionResult =
-        strictReplicaGroupInstanceSelector.select(brokerRequest, ImmutableList.of(segment0, segment3, segment1),
-            requestId);
-    assertTrue(selectionResult.getSegmentToInstanceMap().isEmpty());
-    assertEquals(selectionResult.getUnavailableSegments().size(), 3);
-    // Add a new segment: segment4
-    String segment4 = "segment4";
-    idealStateSegmentAssignment.put(segment4, idealStateInstanceStateMap0);
-    onlineSegments.add(segment4);
-    // External view for 3 segments
-    //   [segment0] -> [instance0:online, instance1:online]
-    //   [segment1] -> [instance0:online, instance1:online]
-    //   [segment3] -> [instance0:online, instance1:online]
-    //   [segment4] -> [instance1:online]
-    // Update segment1, segment3 to be fully online
-    externalViewSegmentAssignment.put(segment0, externalViewInstanceStateMap0);
-    externalViewSegmentAssignment.put(segment1, externalViewInstanceStateMap0);
-    externalViewSegmentAssignment.put(segment3, externalViewInstanceStateMap0);
-    // Segment4 is only available in instance1. This is fine for now because segment3 is a new segment.
-    externalViewSegmentAssignment.put(segment4, externalViewInstanceStateMap1);
-    strictReplicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
-    expectedReplicaGroupInstanceSelectorResult.put(segment0, instance0);
-    expectedReplicaGroupInstanceSelectorResult.put(segment1, instance0);
-    expectedReplicaGroupInstanceSelectorResult.put(segment3, instance0);
-    expectedReplicaGroupInstanceSelectorResult.put(segment4, instance1);
-    selectionResult = strictReplicaGroupInstanceSelector.select(brokerRequest,
-        ImmutableList.of(segment0, segment3, segment1, segment4), requestId);
-    assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertTrue(selectionResult.getUnavailableSegments().isEmpty());
-    // Converge segment4 to be fully online and then offline again to make segment4 old.
-    externalViewSegmentAssignment.put(segment4, externalViewInstanceStateMap0);
-    strictReplicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
-    selectionResult = strictReplicaGroupInstanceSelector.select(brokerRequest,
-        ImmutableList.of(segment0, segment3, segment1, segment4), requestId);
-    expectedReplicaGroupInstanceSelectorResult.put(segment4, instance0);
-    assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertTrue(selectionResult.getUnavailableSegments().isEmpty());
-    // Move segment4 to be offline in instance0
-    externalViewSegmentAssignment.put(segment4, externalViewInstanceStateMap1);
-    strictReplicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
-    selectionResult = strictReplicaGroupInstanceSelector.select(brokerRequest,
-        ImmutableList.of(segment0, segment3, segment1, segment4), requestId);
-    expectedReplicaGroupInstanceSelectorResult.put(segment0, instance1);
-    expectedReplicaGroupInstanceSelectorResult.put(segment1, instance1);
-    expectedReplicaGroupInstanceSelectorResult.put(segment3, instance1);
-    expectedReplicaGroupInstanceSelectorResult.put(segment4, instance1);
-    assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertTrue(selectionResult.getUnavailableSegments().isEmpty());
-  }
-
-  @Test
   public void testMultiStageStrictReplicaGroupSelector() {
     String offlineTableName = "testTable_OFFLINE";
     // Create instance-partitions with two replica-groups and 1 partition. Each replica-group has 2 instances.
@@ -1339,7 +1161,8 @@ public class InstanceSelectorTest {
       assertTrue(selectionResult.getUnavailableSegments().isEmpty());
       selectionResult = strictReplicaGroupInstanceSelector.select(brokerRequest, segments, 0);
       assertTrue(selectionResult.getSegmentToInstanceMap().isEmpty());
-      assertTrue(selectionResult.getUnavailableSegments().isEmpty());
+      // For strict replica group, segment1 and segment0 are old so we should report it as unavailable.
+      assertEquals(selectionResult.getUnavailableSegments(), Arrays.asList(segment0, segment1));
 
       // Disable the OFFLINE instance, both segments should be unavailable
       // {
@@ -1363,8 +1186,8 @@ public class InstanceSelectorTest {
       assertEquals(selectionResult.getUnavailableSegments(), Arrays.asList(segment0, segment1));
 
       // Change the ERROR instance of segment0 to ONLINE, segment0 should be available
-      // (Note that for StrictReplicaGroupInstanceSelector, segment1 does not have any ONLINE/CONSUMING instance, so it
-      // won't mark instance down for segment0)
+      // (Note that for StrictReplicaGroupInstanceSelector, segment1 but it is old so it will mark instance down for
+      // segment0)
       // {
       //   segment0: {
       //     (disabled) instance: OFFLINE,
@@ -1382,8 +1205,8 @@ public class InstanceSelectorTest {
       assertEquals(selectionResult.getSegmentToInstanceMap().size(), 1);
       assertEquals(selectionResult.getUnavailableSegments(), Collections.singletonList(segment1));
       selectionResult = strictReplicaGroupInstanceSelector.select(brokerRequest, segments, 0);
-      assertEquals(selectionResult.getSegmentToInstanceMap().size(), 1);
-      assertEquals(selectionResult.getUnavailableSegments(), Collections.singletonList(segment1));
+      assertTrue(selectionResult.getSegmentToInstanceMap().isEmpty());
+      assertEquals(selectionResult.getUnavailableSegments(), List.of(segment0, segment1));
 
       // Disable the ONLINE instance, both segments should be unavailable
       // {
